  * Joshua Kwan
    - Remove XSIisms in dhclient-script.
    - Evaluate argv[0] after calling basename on it so that we can strcmp it
      against "ptom". It somehow didn't happen in the internal dhclient-script
      context, but appeared during testing in the shell.
  * Thomas Hood
    - Change interfaces options that use underscore to hyphens. No loss
      of functionality. (Closes: #255185)
    - static.c:
      + Add resolvconf support (Closes: #255187)
      + Add comments to /e/n/i about which packages implement which options
    - dhcp.c
      + Add comments to /e/n/i about which packages implement which options
      + Fix race to dhcp_exit_status after dhcp_running set to 0.
      + Count iterations in the polling loop instead of checking the time()
      + Use waitpid(dhcp_pid,,) instead of wait() to get child status
        since we don't want the status of, e.g., killall.sh
      + Eliminate use of dhcp_running and use (dhcp_pid>0) in its place
      + Eliminate some unnecessary calls to kill_dhcp_client()
      + Mark local variables with "static"
      + Eliminate use of quit_after_hostname by creating HOSTNAME_SANS_NETWORK
        from HOSTNAME and DOMAIN_SANS_NETWORK from DOMAIN
      + Use DHCP hostname as the default hostname if no hostname is set
        (Closes: #239591)
      + Write hostname provided to the DHCP client in order to get a lease
        on the "hostname" option line for the interface in /e/n/i
      + If the user backs up from netcfg/get_hostname, go to retry question
      + Wait at least two seconds for DHCP client to exit  (Closes: #255984)
      + Clean up code
        . Always use spaces for indentation
        . Improve comments
        . Reorder state machine states
        . Move kill_dhcp_client() to top of file
    - prebaseconfig
      + Don't cp /etc/dhclient.conf and /etc/dhcp3/dhclient.conf to target

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 18 Jun 2004 23:26:15 -0700

netcfg (0.70) unstable; urgency=medium
